# given

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/cli/: entry_map.rs  mod.rs
src/dependency_resolver/: file_cache.rs  mod.rs
src/model/: mod.rs  update_options.rs  version.rs
src/package_search/: maven.rs  mod.rs
src/parser/: mod.rs  span.rs
