[package]
name = "given"
version = "0.1.3"
edition = "2021"
description = "A tool for interactively updating your Scala dependencies."
license = "Apache-2.0"

[dependencies]
async-trait = "0.1.80"
futures = "0.3.30"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
env_logger = "0.11.3"
log = "0.4.21"
quick-xml = { version = "0.31.0", features = ["serde", "serialize"] }
tree-sitter = "0.21"
tree-sitter-scala = "0.21"
itertools = "0.13.0"
regex = "1.10.4"
altar = "0.1.0"
webbrowser = "1.0.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.10.1"

[build-dependencies]
cc="1.0"

